add migrations and updated auth
