# src/domain/post/post.controller.ts
@@ -1,16 +1,17 @@
 import { NextFunction, Request, Response } from 'express';
+import { PostGetByTitleSchema } from './validation/schema/post.get.schema';
 import PostService from './post.service';
 import PostCreateSchema from './validation/schema/post.create.schema';
 import PostUpdateSchema from './validation/schema/post.update.schema';
-import PostGetSchema from './validation/schema/post.get.schema';
 
 class PostController {
   constructor(private readonly postService: PostService) { }
 
-  public async getAllPosts(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
+  public async getAllUserPosts(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
     try {
       const searchSubstring = req.query.search || '';
-      const posts = await this.postService.getAllPosts(searchSubstring as string);
+      const userId = req.session.user?.id || '';
+      const posts = await this.postService.getAllUserPosts(userId, searchSubstring as string);
       return res.status(200).json({ status: 200, data: posts, message: "List of all posts" });
     }
     catch (err) {
@@ -18,16 +19,16 @@ class PostController {
     }
   }
 
-  public async getPostById(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
+  public async getPostByTitle(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
     try {
-      const postId = req.params.postId;
-      const { error } = PostGetSchema.validate(postId);
+      const postTitle = req.params.postTitle;
+      const { error } = PostGetByTitleSchema.validate(postTitle);
 
       if (error) {
         return res.status(422).send(`Validation error: ${error.details[0].message}`);
       }
 
-      const post = await this.postService.getPostById(postId);
+      const post = await this.postService.getPostByTitle(postTitle);
       return res.status(200).json({ status: 200, data: post, message: "Post details" });
     }
     catch (err) {
@@ -37,6 +38,7 @@ class PostController {
 
   public async createPost(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
     try {
+      const userId = req.session.user?.id || '';
       const postDataCreate = req.body;
       const { error } = PostCreateSchema.validate(postDataCreate);
 
@@ -44,7 +46,10 @@ class PostController {
         return res.status(422).send(`Validation error: ${error.details[0].message}`);
       }
 
-      const newPost = await this.postService.createPost(postDataCreate);
+      const newPost = await this.postService.createPost({
+        ...postDataCreate,
+        authorId: userId
+      });
 
       return res.status(201).location(`/api/posts/${newPost.id}`).json(
         { status: 201, data: newPost, message: "Post successfully created" }
@@ -55,13 +60,13 @@ class PostController {
     }
   }
 
-  public async updatePostById(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
+  public async updatePostByTitle(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
     try {
-      const postId = req.params.postId;
-      const postIdValid = PostGetSchema.validate(postId);
+      const postTitle = req.params.postTitle;
+      const postTitleValid = PostGetByTitleSchema.validate(postTitle);
 
-      if (postIdValid.error) {
-        return res.status(422).send(`Validation error: ${postIdValid.error.details[0].message}`);
+      if (postTitleValid.error) {
+        return res.status(422).send(`Validation error: ${postTitleValid.error.details[0].message}`);
       }
 
       const newPostData = req.body;
@@ -71,24 +76,33 @@ class PostController {
         return res.status(422).send(`Validation error: ${newPostDataValid.error.details[0].message}`);
       }
 
-      const updatedPost = await this.postService.updatePostById(postId, newPostData);
-      return res.status(200).json({ status: 200, data: updatedPost, message: "Post successfully updated" });
+      const updatedPost = await this.postService.updatePostByTitle(postTitle, newPostData);
+      return res.status(200).json({
+        status: 200,
+        data: {
+          title: updatedPost.title,
+          access: updatedPost.access,
+          content: updatedPost.content,
+          tags: updatedPost.tags
+        },
+        message: "Post successfully updated"
+      });
     }
     catch (err) {
       next(err);
     }
   }
 
-  public async deletePostById(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
+  public async deletePostByTitle(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
     try {
-      const postId = req.params.postId;
-      const { error } = PostGetSchema.validate(postId);
+      const postTitle = req.params.postTitle;
+      const { error } = PostGetByTitleSchema.validate(postTitle);
 
       if (error) {
         return res.status(422).send(`Validation error: ${error.details[0].message}`);
       }
 
-      await this.postService.deletePostById(postId);
+      await this.postService.deletePostByTitle(postTitle);
       return res.status(200).json({ status: 200, message: "Post successfully deleted" });
     }
     catch (err) {
